<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.shahabyari.arpaneteniac.tamrinjalase5.MainActivity"
    android:background="@color/colorPrimary">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/firsttext"
    android:textColor="@android:color/white"
    android:layout_marginTop="170sp"
    android:textAlignment="center"
    android:textSize="20sp"

    />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/white"
        android:layout_marginTop="15sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SecoundText"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="65sp" 
        android:layout_marginTop="30sp"
        android:text="@string/Button1"
        android:background="@drawable/button1"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />
    <Button
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="65sp"
        android:text="@string/Button2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@drawable/button2"
        />

    <android.support.design.widget.FloatingActionButton
    android:layout_height="50sp"
        android:layout_width="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="300sp"
            android:src="@mipmap/forward"
        android:id="@+id/fb"
        />


</LinearLayout>
